scripts/nullaway/annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8.txt
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/linalg/Matrix.java:493: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/render/Object3D.java:125: error: [NullAway] initializer method does not guarantee @NonNull fields vertices (line 31), edges (line 40), colors (line 43), vertexCounts (line 46), parent (line 54) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Object3D() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/render/Object3D.java:129: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return boundingBox;
		^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/linalg/BoundingBox.java:35: error: [NullAway] initializer method does not guarantee @NonNull fields center (line 11), xAxis (line 12), yAxis (line 12), zAxis (line 12) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	private BoundingBox(float[] points,boolean isAxisAligned) {
	        ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/Test3D.java:124: error: [NullAway] unboxing of a @Nullable value
				world.setupPerspectiveProjection( fov.get() ,  aspectRatio  ,  Z_NEAR , Z_FAR );
				                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/Test3D.java:124: error: [NullAway] passing @Nullable parameter 'fov.get()' where @NonNull is required
				world.setupPerspectiveProjection( fov.get() ,  aspectRatio  ,  Z_NEAR , Z_FAR );
				                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/Test3D.java:212: error: [NullAway] unboxing of a @Nullable value
						fov.set( fov.get() - 1 );
						                ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/Test3D.java:217: error: [NullAway] unboxing of a @Nullable value
						fov.set( fov.get() + 1 );
						                ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/render/World.java:51: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return projectionMatrix;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/render/SoftwareRenderer.java:66: error: [NullAway] initializer method does not guarantee @NonNull field world (line 38) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SoftwareRenderer() 
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url7315374482_toby1984_3dtest_tgz-pJ8-de_codesourcery_engine_Test3DJ8/src/de/codesourcery/engine/render/SoftwareRenderer.java:594: error: [NullAway] dereferenced expression normalMatrix is @Nullable
				final Vector4 end = p1.plus( normalMatrix.multiply( normal ).normalize().multiply(2f) );
				                                         ^
    (see http://t.uber.com/nullaway )
11 errors
